--- a/templates/iam_template.yaml
+++ b/templates/iam_template.yaml
@@ -8,7 +8,7 @@ Parameters:
     Type: String
   KMSAlias:
     Type: String
-    Default: sagemaker-kms-example
+    Default: sagemaker-kms-kgnraham
 
 Resources:
   SageMakerNotebookInstancePolicy:
