--- a/templates/sm-studio-vpc-infra.template.yaml
+++ b/templates/sm-studio-vpc-infra.template.yaml
@@ -9,7 +9,7 @@ Parameters:
     MaxLength: '16'
     MinLength: '1'
     Type: String
-    Default: studiovpc
+    Default: studiovpc2
   VpcCIDR:
     Type: String
     Default: 10.2.0.0/16
@@ -37,7 +37,7 @@ Resources:
     Properties:
       Parameters:
         ProjectName: !Ref ProjectName
-        DataBucketName: !Sub ${ProjectName}-data-${AWS::AccountId}
+        DataBucketName: !Sub ${ProjectName}-data-${AWS::AccountId}-kgnraham
       TemplateURL:  https://aws-ml-blog.s3.amazonaws.com/artifacts/Securing-Amazon-SageMaker-Studio-connectivity-using-private-vpc/s3_template.yaml 
   #================================================================================
   # VPC WITH A PRIVATE SUBNET AND SECURITY GROUP 
